# Customer-Churn-Prediction-Model

./: .gitignore  pyproject.toml
config/: eda_config.yaml  preprocessing_config.yaml
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_model_training.ipynb
results/: confidence_intervals.csv  missing_values.csv  normality_tests.csv  outliers.csv
src/01_eda/: data_loader.py
src/eda/: __init__.py  bivariate.py  data_loader.py  data_quality.py  eda_pipeline.py  report_generator.py  univariate.py
src/preprocessing/: __init__.py  business_logic.py  data_splitter.py  datetime_features.py  duplicate_handler.py  encoding.py  feature_engineering.py  missing_handler.py  outlier_handler.py  pipeline.py  preprocessing_pipeline.py  transformations.py
src/utils/: __init__.py  file_utils.py  logger.py  timer.py
